# book-pcph

./: .gitignore  Errata.md  Readme.md  bench.md  cabal.project  hie.yaml  memo.md  stack-88.yaml  stack.yaml
ch02/: CHANGELOG.md  ch02.cabal
ch02/par-sudoku/: Readme.md  par-sudoku.cabal  stack.yaml  sudoku17.1000.txt  sudoku2.eventlog  sudoku3.eventlog  sudoku4.eventlog
ch02/par-sudoku/app/: Sudoku1.hs  Sudoku2.hs  Sudoku3.hs  Sudoku4.hs
ch02/par-sudoku/src/: Sudoku.hs
ch02/rpar/: Readme.md  rpar.cabal  rpar.hs
ch03/: Readme.md
ch03/kmeans/: kmeans-n2.eventlog  kmeans-n4.eventlog  kmeans.cabal
ch03/kmeans/app/: kmeans.hs
ch03/kmeans/src/: KMeansCore.hs
ch03/strat/: .ghci  Readme.md  strat.cabal
ch03/strat/app/: parlist.hs  strat.hs
ch04/fwsparse/: fwsparse.cabal  fwsparse.hs  fwsparse1.hs
ch04/parinfer/: Readme.md  parinfer.cabal
ch04/parinfer/src/: Infer.hs  InferMonad.hs  Type.hs
ch04/pipeline/: Main.hs  pipeline.cabal
ch04/shortest-paths/: Readme.md  fwsparse.hs  fwsparse1.hs  shortest-paths.cabal
ch04/timetable/: Readme.md  timetable.cabal  timetable.hs
ch05/fwdense/: Readme.md  fwdense.cabal
ch05/repa-example/: .ghci  Lib.hs  Main.hs  repa-example.cabal
ch05/rotateimage/: Readme.md  cabal.project  rotateimage.cabal  rotateimage.hs
ch06/accelerate-example/: .ghci  Lib.hs  accelerate-example.cabal
ch06/fwaccel/: Readme.md  fwaccel-gpu.hs  fwaccel.cabal  fwaccel.hs
ch06/mandel/: mandel.cabal  mandel.hs
ch06/mandel/src/: Config.hs
ch07/chan/: chan.cabal  chan.hs  chan1.hs
ch07/fork/: fork.cabal
ch07/logger/: logger.cabal
ch07/mvar/: mvar.cabal
ch07/phonebook/: phonebook.cabal  phonebook.hs
ch07/reminders/: reminders.cabal
ch08/: .ghci
ch08/geturls/: geturls.cabal
ch08/geturls/app/: geturls1.hs  geturls2.hs  geturls3.hs  geturls4.hs  geturls5.hs  geturls6.hs
ch08/geturls/src/: GetURL.hs  TimeIt.hs
ch09/catch-mask/: catch-mask.cabal  catch-mask1.hs  catch-mask2.hs
ch09/chan3/: chan3.cabal  chan3.hs
ch09/geturlscancel/: geturlscancel.cabal  geturlscancel1.hs  geturlscancel2.hs
ch09/modifytwo/: modifytwo.cabal  modifytwo.hs
ch09/timeout/: timeout.cabal  timeout.hs
ch10/chanbench/: README.md  chanbench.cabal
ch10/chanbench/app/: chanbench.hs
ch10/chanbench/src/: TBQueue.hs  TList.hs  TQueue.hs
ch10/geturlsfirst/: geturlsfirst.cabal  geturlsfirst.hs
ch10/tchan/: TChan.hs  tchan.cabal
ch10/tmvar/: tmvar.cabal
ch10/tmvar/src/: TMVar.hs  TMVar2.hs
ch10/windowman/: windowman.cabal
ch10/windowman/src/: WindowManager.hs
ch11/async-geturls/: async-geturls.cabal
ch11/async-geturls/app/: geturls7.hs  geturls8.hs  geturls9.hs
ch11/async-geturls/src/: Async.hs
ch11/timeout2/: timeout2.cabal  timeout2.hs
ch12/chat/: chat.cabal  chat.hs
ch12/simple-server/: server.hs  server2.hs  server3.hs  simple-server.cabal
ch13/: Readme.md  findpar2.eventlog
ch13/findpar/: findpar.cabal  findpar1.hs  findpar2.hs  findpar3.hs  findpar4.hs  findpar5.hs
ch13/findpar/src/: CasIORef.hs
ch13/findseq/: findseq.cabal  findseq.hs
ch14/distrib-chat/: chat-noslave.hs  chat.hs  distrib-chat.cabal
ch14/distrib-db/: distrib-db.cabal
ch14/distrib-db/app/: db.hs
ch14/distrib-db/src/: Database.hs  DatabaseSample.hs  WorkerSample.hs
ch14/distrib-ping/: distrib-ping.cabal
ch14/distrib-ping/app/: ping-fail.hs  ping-multi.hs  ping-tc-merge.hs  ping-tc.hs  ping.hs
ch14/distrib-ping/src/: DistribUtils.hs
ch15/: Readme.md
ch15/deadlock/: deadlock.cabal  deadlock1.hs  deadlock2.hs
ch15/mvar/: mvar4.cabal  mvar4.eventlog  mvar4.hs
ch15/threadperf/: threadperf.cabal  threadperf1.hs  threadperf2.hs
