cabal-version:      2.4
name:               par-sudoku
version:            0.1.0.0
extra-source-files: CHANGELOG.md

common deps
  build-depends:    base >=4.8 && <4.15
  ghc-options:      -O2 -rtsopts
  default-language: Haskell2010

library
  import:          deps
  hs-source-dirs:  src
  build-depends:   array ^>=0.5
  exposed-modules: Sudoku

executable sudoku1
  import:        deps
  main-is:       app/Sudoku1.hs
  build-depends: par-sudoku

executable sudoku2
  import:        deps
  main-is:       app/Sudoku2.hs
  build-depends:
    , deepseq     ^>=1.4
    , par-sudoku
    , parallel    ^>=3.2

  ghc-options:   -threaded -eventlog

executable sudoku3
  import:        deps
  main-is:       app/Sudoku3.hs
  build-depends:
    , par-sudoku
    , parallel    ^>=3.2

  ghc-options:   -threaded -eventlog

executable sudoku4
  import:        deps
  main-is:       app/Sudoku4.hs
  build-depends:
    , par-sudoku
    , parallel    ^>=3.2

  ghc-options:   -threaded -eventlog