cabal-version:      2.4
name:               rpar
version:            0.1.0.0
extra-source-files: CHANGELOG.md

executable rpar
  main-is:          rpar.hs
  build-depends:
    , base      ^>=4.14
    , parallel  ^>=3.2
    , time      ^>=1.10

  ghc-options:      -O2 -threaded
  default-language: Haskell2010
