cabal-version: 2.4
name:          kmeans
version:       0.1.0.0

common common
  build-depends:
    , base      >=4.8 && <4.15
    , parallel  ^>=3.2

  default-language: Haskell2010

library
  import:          common
  hs-source-dirs:   src
  exposed-modules: KMeansCore

executable kmeans
  import:        common
  main-is:       app/kmeans.hs
  build-depends:
    , kmeans
    , vector  ^>=0.12

  ghc-options:   -O2 -threaded -rtsopts -eventlog
