cabal-version: 2.4
name:          strat
version:       0.1.0.0

common common
  build-depends:
    , base      >=4.8 && <4.15
    , parallel  ^>=3.2

  default-language: Haskell2010

executable strat
  import:        common
  main-is:       app/strat.hs
  build-depends: deepseq ^>=1.4
  ghc-options:   -O2 -threaded

executable parlist
  import:  common
  main-is: app/parlist.hs
