cabal-version: 2.4
name:          fwsparse
version:       0.1.0.0

library
  hs-source-dirs:   src
  exposed-modules:  SparseGraph
  build-depends:
    , array
    , base
    , containers
    , random

  default-language: Haskell2010

executable fwsparse
  main-is:          fwsparse.hs
  build-depends:
    , base
    , containers
    , fwsparse
    , random

  ghc-options:      -O2
  default-language: Haskell2010

executable fwsparse1
  main-is:          fwsparse1.hs
  build-depends:
    , base
    , containers
    , fwsparse
    , monad-par
    , random

  ghc-options:      -O2 -threaded
  default-language: Haskell2010
