cabal-version: 2.4
name:          shortest-paths
version:       0.1.0.0

common common
  build-depends:
    , base        >=4.8 && <4.15
    , containers

  default-language: Haskell2010

executable fwsparse
  import:      common
  main-is:     fwsparse.hs
  ghc-options: -O2

executable fwsparse1
  import:        common
  main-is:       fwsparse1.hs
  build-depends: monad-par
  ghc-options:   -O2 -threaded