cabal-version: 2.4
name:          timetable
version:       0.1.0.0

executable timetable
  main-is:          timetable.hs
  build-depends:
    , base
    , containers
    , deepseq
    , random

  ghc-options:      -O2
  default-language: Haskell2010

executable timetable1
  main-is:          timetable1.hs
  build-depends:
    , base
    , containers
    , deepseq
    , random

  ghc-options:      -O2
  default-language: Haskell2010

executable timetable2
  main-is:          timetable2.hs
  build-depends:
    , base
    , containers
    , deepseq
    , monad-par
    , random

  ghc-options:      -O2 -threaded
  default-language: Haskell2010

executable timetable3
  main-is:          timetable3.hs
  build-depends:
    , base
    , containers
    , deepseq
    , monad-par
    , random

  ghc-options:      -O2 -threaded
  default-language: Haskell2010
