cabal-version: 2.4
name:          fwdense
version:       0.1.0.0

executable fwdense
  main-is:          fwdense.hs
  build-depends:
    , base
    , repa

  ghc-options:      -O2 -fllvm
  default-language: Haskell2010

executable fwdense1
  main-is:          fwdense1.hs
  build-depends:
    , base
    , repa

  ghc-options:      -O2 -threaded -fllvm
  default-language: Haskell2010
