cabal-version: 2.4
name:          rotateimage
version:       0.1.0.0

common common
  build-depends:    base >=4.8 && <4.15
  default-language: Haskell2010

executable rotateimage
  import:        common
  main-is:       rotateimage.hs
  build-depends:
    , repa
    , repa-devil
    -- , friday-devil
  ghc-options:   -O2