cabal-version: 2.4
name:          fwaccel
version:       0.1.0.0

executable fwaccel
  main-is:          fwaccel.hs
  build-depends:
    , accelerate
    , base

  ghc-options:      -O2
  default-language: Haskell2010

executable fwaccel-gpu
  main-is:          fwaccel-gpu.hs
  build-depends:
    , accelerate
    , accelerate-llvm-ptx
    , base

  ghc-options:      -O2 -threaded
  default-language: Haskell2010
