cabal-version: 2.4
name:          chan
version:       0.1.0.0

executable chan
  main-is:          chan.hs
  build-depends:    base
  ghc-options:      -O2
  default-language: Haskell2010

executable chan2
  main-is:          chan2.hs
  build-depends:    base
  ghc-options:      -O2
  default-language: Haskell2010
