cabal-version: 2.4
name:          mvar
version:       0.1.0.0

executable mvar
  main-is:          mvar1.hs
  build-depends:    base
  ghc-options:      -O2
  default-language: Haskell2010

executable mvar2
  main-is:          mvar2.hs
  build-depends:    base
  ghc-options:      -O2
  default-language: Haskell2010

executable mvar3
  main-is:          mvar3.hs
  build-depends:    base
  ghc-options:      -O2
  default-language: Haskell2010