cabal-version: 2.4
name:          reminders
version:       0.1.0.0

executable reminders
  main-is:          reminders.hs
  build-depends:    base
  ghc-options:      -O2
  default-language: Haskell2010

executable reminders2
  main-is:          reminders2.hs
  build-depends:    base
  ghc-options:      -O2
  default-language: Haskell2010
