cabal-version: 2.4
name:          geturls
version:       0.1.0.0

common common
  build-depends:
    , base
    , bytestring

  default-language: Haskell2010

common app
  build-depends: geturls
  ghc-options:   -O2

library
  import:          common
  hs-source-dirs:  src
  build-depends:
    , http-conduit
    , time

  exposed-modules:
    GetURL
    TimeIt

executable geturls1
  import:  common, app
  main-is: app/geturls1.hs

executable geturls2
  import:  common, app
  main-is: app/geturls2.hs

executable geturls3
  import:  common, app
  main-is: app/geturls3.hs

executable geturls4
  import:  common, app
  main-is: app/geturls4.hs

executable geturls5
  import:  common, app
  main-is: app/geturls5.hs

executable geturls6
  import:  common, app
  main-is: app/geturls6.hs
