cabal-version: 2.4
name:          catch-mask
version:       0.1.0.0

common common
  build-depends:    base
  ghc-options:      -O2
  default-language: Haskell2010

executable catch-mask1
  import:  common
  main-is: catch-mask1.hs

executable catch-mask2
  import:  common
  main-is: catch-mask2.hs
