cabal-version: 2.4
name:          geturlscancel
version:       0.1.0.0

common common
  build-depends:
    , base
    , bytestring
    , geturls

  ghc-options:      -O2
  default-language: Haskell2010

executable geturlscancel1
  import:  common
  main-is: geturlscancel1.hs

executable geturlscancel2
  import:  common
  main-is: geturlscancel2.hs
