cabal-version: 2.4
name:          simple-server
version:       0.1.0.0

executable server
  main-is:          server.hs
  build-depends:    base, network, time
  ghc-options:      -O2
  default-language: Haskell2010

executable server2
  main-is:          server2.hs
  build-depends:    base, network, stm, async
  ghc-options:      -O2
  default-language: Haskell2010