cabal-version: 2.4
name:          distrib-db
version:       0.1.0.0

library
  hs-source-dirs:  src
  build-depends:  base, containers, distributed-process, binary

  exposed-modules: Database, DatabaseSample, WorkerSample
  default-language: Haskell2010

executable distrib-db
  main-is:          app/db.hs
  build-depends:    base, distrib-db, distrib-ping, distributed-process
  ghc-options:      -O2
  default-language: Haskell2010