cabal-version: 2.4
name:          distrib-ping
version:       0.1.0.0

library
  hs-source-dirs:  src
  build-depends:  base, distributed-process, template-haskell, network, distributed-closure, distributed-static, distributed-process-simplelocalnet

  exposed-modules: DistribUtils
  default-language: Haskell2010

executable ping
  main-is:          app/ping.hs
  build-depends:    base, binary, distributed-process, distrib-ping
  ghc-options:      -O2 -Wall
  default-language: Haskell2010

executable ping-multi
  main-is:          app/ping-multi.hs
  build-depends:    base, binary, distributed-process, distrib-ping
  ghc-options:      -O2 -Wall
  default-language: Haskell2010

executable ping-tc
  main-is:          app/ping-tc.hs
  build-depends:    base, binary, distributed-process, distrib-ping
  ghc-options:      -O2 -Wall
  default-language: Haskell2010

executable ping-tc-merge
  main-is:          app/ping-tc-merge.hs
  build-depends:    base, binary, distributed-process, distrib-ping
  ghc-options:      -O2 -Wall
  default-language: Haskell2010

executable ping-fail
  main-is:          app/ping-fail.hs
  build-depends:    base, binary, distributed-process, distrib-ping
  ghc-options:      -O2 -Wall
  default-language: Haskell2010