cabal-version: 2.4
name:          deadlock
version:       0.1.0.0

executable deadlock1
  main-is:          deadlock1.hs
  build-depends:    base
  ghc-options:      -O2
  default-language: Haskell2010

executable deadlock2
  main-is:          deadlock2.hs
  build-depends:    base
  ghc-options:      -O2
  default-language: Haskell2010